; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_parser.c_ParseChar.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_parser.c_ParseChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bParseError = common dso_local global i64 0, align 8
@CurChar = common dso_local global i64 0, align 8
@ParsePos = common dso_local global i64* null, align 8
@bLineContinuations = common dso_local global i64 0, align 8
@ParseLine = common dso_local global i64* null, align 8
@TRUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @ParseChar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ParseChar() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = load i64, i64* @bParseError, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i64 0, i64* @CurChar, align 8
  store i64 0, i64* %1, align 8
  br label %41

6:                                                ; preds = %0
  br label %7

7:                                                ; preds = %35, %6
  br label %8

8:                                                ; preds = %12, %7
  %9 = load i64*, i64** @ParsePos, align 8
  %10 = getelementptr inbounds i64, i64* %9, i32 1
  store i64* %10, i64** @ParsePos, align 8
  %11 = load i64, i64* %9, align 8
  store i64 %11, i64* %2, align 8
  br label %12

12:                                               ; preds = %8
  %13 = load i64, i64* %2, align 8
  %14 = call i64 @_T(i8 signext 13)
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %8, label %16

16:                                               ; preds = %12
  %17 = load i64, i64* %2, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %39, label %19

19:                                               ; preds = %16
  %20 = load i64*, i64** @ParsePos, align 8
  %21 = getelementptr inbounds i64, i64* %20, i32 -1
  store i64* %21, i64** @ParsePos, align 8
  %22 = load i64, i64* @bLineContinuations, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %38

24:                                               ; preds = %19
  %25 = load i64*, i64** @ParseLine, align 8
  %26 = load i64, i64* @TRUE, align 8
  %27 = call i32 @ReadLine(i64* %25, i64 %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %31, label %29

29:                                               ; preds = %24
  %30 = load i64, i64* @TRUE, align 8
  store i64 %30, i64* @bParseError, align 8
  br label %37

31:                                               ; preds = %24
  %32 = load i64*, i64** @ParseLine, align 8
  store i64* %32, i64** @ParsePos, align 8
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %31
  br label %7

36:                                               ; preds = %31
  br label %37

37:                                               ; preds = %36, %29
  br label %38

38:                                               ; preds = %37, %19
  br label %39

39:                                               ; preds = %38, %16
  %40 = load i64, i64* %2, align 8
  store i64 %40, i64* @CurChar, align 8
  store i64 %40, i64* %1, align 8
  br label %41

41:                                               ; preds = %39, %5
  %42 = load i64, i64* %1, align 8
  ret i64 %42
}

declare dso_local i64 @_T(i8 signext) #1

declare dso_local i32 @ReadLine(i64*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
